--- a/index.html
+++ b/index.html
@@ -153,15 +153,16 @@ canvas {
 		</category>
 	</category>
 	<category name="Input">
-		<block type="temperature"></block>
-		<block type="humidity"></block>
-		<block type="light"></block>
+		<block type="area"></block>
+		<block type="motor_position"></block>
+		<block type="time"></block>
 		<block type="range"></block>
 	</category>
 	<category name="Output">
-		<block type="lamp"></block>
-		<block type="fan"></block>
-		<block type="humidifier"></block>
+		<block type="light"></block>
+		<block type="shock"></block>
+		<block type="turntable"></block>
+		<block type="feeder"></block>
 		<block type="sound"></block>
 	</category>
 	<category name="Logic">
