--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ canvas {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Arenomat</a>
+      <a class="navbar-brand" href="#">Arena-O-Mat</a>
     </div>
 </div>
 </nav>
