--- a/index.html
+++ b/index.html
@@ -117,8 +117,10 @@ canvas {
 			<div id="tcamera" class="tab-pane fade">
 			    <div class="row">
 			    <span class="col-md-6">
-				<img width=95% id="cam" class="area" style="position: absolute" />
-				<canvas id="areas" width="760" height="570" style="width: 95%; position: absolute; border: 3px solid red; z-index: 999"></canvas>
+				<img width="640" height="480" id="cam" class="area" style="position: absolute" />
+				<canvas id="areas"  width="640" height="480" style="position: absolute; border: 1px solid black; z-index: 999"></canvas>
+				<canvas id="object" width="640" height="480" style="position: absolute; z-index: 900"></canvas>
+				<canvas id="arena"  width="640" height="480" style="position: absolute"></canvas>
  <div class="progress progress-striped active">
     <div class="progress-bar"  role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
 </div>
@@ -127,8 +129,6 @@ recognized: <span id="cv_counter">0</span><br />
 fps: <span id="fps">0</span>
 			    </span>
 			    <span class="col-md-6">
-				<canvas id="arena" width="760" height="570" style="width: 95%; position: absolute; background-color: #fdffdd"></canvas>
-				<canvas id="object" width="760" height="570" style="width: 95%; position: absolute; z-index: 1000"></canvas>
 			    </span>
 			    </div>
 			</div>
@@ -561,10 +561,11 @@ function clear() {
 // arena image
 	var c = document.getElementById("arena");
 	var ctx = c.getContext("2d");
-	ctx.arc(ctx.canvas.width/2, ctx.canvas.height/2, ctx.canvas.height/2, 0, Math.PI*2);
-	ctx.fillStyle = 'rgba(250, 250, 250, 0.1)';
-	ctx.fill();
+	ctx.arc(ctx.canvas.width/2, ctx.canvas.height/2, 5, 0, Math.PI*2);
 	ctx.stroke();
+	ctx.arc(ctx.canvas.width/2, ctx.canvas.height/2, ctx.canvas.height/2, 0, Math.PI*2);
+	ctx.fillStyle = 'rgba(250, 250, 250, 0.3)';
+	ctx.fill();
 
 
 
@@ -603,7 +604,7 @@ function clear() {
 	var oldtime = 0;
 
 	socket.on('shocking', function(shocking) {
-	    $('#shocking').css('background',(shocking) ? 'red' : 'black');
+	    $('#shocking').css('background',(shocking > 0) ? 'red !important' : 'black !important');
 	    $('#shocking').text(shocking/10);
 	});
 	socket.on('activeArea', function(data) {
@@ -632,7 +633,7 @@ $('.progress-bar').css('width', perc+'%').text(perc);
 			var c = document.getElementById("object");
 			var ctx = c.getContext("2d");
 			ctx.arc(old[old.length - 1].x+5, old[old.length - 1].y+5, 10, 0, Math.PI*2, true);
-			ctx.fillStyle = 'rgba(255, 0, 0, 1)';
+			ctx.fillStyle = 'rgba(255, 0, 0, 0.5)';
 			ctx.fill();
 		}
 		else {
@@ -646,9 +647,9 @@ $('.progress-bar').css('width', perc+'%').text(perc);
 			var c = document.getElementById("object");
 			var ctx = c.getContext("2d");
 			ctx.canvas.width = ctx.canvas.width;
-			ctx.clearRect(old.x, old.y, 10, 10);
+//			ctx.clearRect(old.x, old.y, 10, 10);
 			ctx.arc(position.x+5, position.y+5, 10, 0, Math.PI*2, true);
-			ctx.fillStyle = 'rgba(0, 255, 0, 1)';
+			ctx.fillStyle = 'rgba(0, 255, 0, 0.5)';
 			ctx.fill();
 
 
