--- a/index.html
+++ b/index.html
@@ -117,11 +117,13 @@ canvas {
 			<div id="tcamera" class="tab-pane fade">
 			    <div class="row">
 			    <span class="col-md-6">
+				<div style="width: 640px; height: 480px">
 				<img width="640" height="480" id="cam" class="area" style="position: absolute" />
 				<canvas id="areas"  width="640" height="480" style="position: absolute; border: 1px solid black; z-index: 999"></canvas>
 				<canvas id="object" width="640" height="480" style="position: absolute; z-index: 900"></canvas>
 				<canvas id="arena"  width="640" height="480" style="position: absolute"></canvas>
- <div class="progress progress-striped active">
+				</div>
+ <div class="progress progress-striped active" style="width: 640px; height: 30px;">
     <div class="progress-bar"  role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
 </div>
 frames: <span id="cam_counter">0</span><br />
@@ -563,9 +565,15 @@ function clear() {
 	var ctx = c.getContext("2d");
 	ctx.arc(ctx.canvas.width/2, ctx.canvas.height/2, 5, 0, Math.PI*2);
 	ctx.stroke();
+
+	ctx.beginPath();
+
+var radius = ctx.canvas.height/2;
 	ctx.arc(ctx.canvas.width/2, ctx.canvas.height/2, ctx.canvas.height/2, 0, Math.PI*2);
 	ctx.fillStyle = 'rgba(250, 250, 250, 0.3)';
-	ctx.fill();
+	ctx.clip();
+ctx.fillRect(0, 0, ctx.canvas.width, ctx.canvas.height);
+//	ctx.clearRect();
 
 
 
